crates/azalea-core/src/parse/snapshots/azalea_core__parse__parser_tests__bad_string_literal-2.snap
---
source: crates/azalea-core/src/parse/parser_tests.rs
expression: output
---
SOURCE:
"Hello, \xworld"

ERROR:
Error: Expected an expression
  1 > | "Hello, \xworld"
    ^
Hint: Invalid escape sequence in string literal
