crates/azalea-core/src/parse/snapshots/azalea_core__parse__parser_tests__invalid_identifier-2.snap
---
source: crates/azalea-core/src/parse/parser_tests.rs
expression: output
---
SOURCE:
#1abcdef

ERROR:
  2 | #1abcdef
Error: Expected an expression
